--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(SRC "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
 add_library(depends INTERFACE)
 target_include_directories(depends INTERFACE "${INCLUDE}")
-target_sources(depends INTERFACE "${LIB}/glad.c")
+target_sources(depends INTERFACE "${LIB}/glad.c" "${LIB}/shader.cpp")
 
 add_executable(${PROJECT_NAME} "${SRC}/main.cpp")
 target_link_libraries(depends INTERFACE "${LIB}/libglfw3.a" "${LIB}/libassimp.dll.a" "${LIB}/libzlibstatic.a" OpenGL::GL kernel32 user32 gdi32)
